--- a/SeleniumIDE/.github/workflows/pipelinesetup-seleniumide.yaml
+++ b/SeleniumIDE/.github/workflows/pipelinesetup-seleniumide.yaml
@@ -3,23 +3,28 @@ name: Selenium IDE CI
 on:
   push:
     branches:
-      -main
-  pull-request:
+      - main
+  pull_request:
     branches:
-      -main
-  
+      - main
+
 jobs:
   build:
     runs-on: ubuntu-latest
 
-  steps:
+    steps:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Set up .Net
+    - name: Set up .NET Core
       uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: "6.0.x"
+        dotnet-version: '6.0.x'
+
+    - name: Install Chrome
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y google-chrome-stable
 
     - name: Install dependencies
       run: dotnet restore
@@ -28,4 +33,6 @@ jobs:
       run: dotnet build --no-restore
 
     - name: Run tests
-      run: dotnet tests --verbosity normal
+      env:
+        CHROMEWEBDRIVER: /usr/bin/google-chrome
+      run: dotnet test --verbosity normal
